--- a/weather-config-server/src/main/resources/application.properties
+++ b/weather-config-server/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.application.name=weather-config-server
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 spring.cloud.config.server.git.uri=https://github.com/NuaaPrince/weather
-spring.cloud.config.server.git.search-paths=config-repo
+spring.cloud.config.server.git.search-paths=config
