--- a/weather-report-server/src/main/resources/application.properties
+++ b/weather-report-server/src/main/resources/application.properties
@@ -9,3 +9,5 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 feign.client.config.feignName.connectTimeout=5000
 feign.client.config.feignName.readTimeout=5000
 
+spring.cloud.config.profile=dev
+spring.cloud.config.uri=http://localhost:8888/
